@@ -1261,4 +1261,12 @@
   <block id="a77641000b55773f3d4f4abfc8eaa6ac" category="sidebar">Optimice las cargas de trabajo con Workload Factory</block>
   <block id="bec1e3daee54f5a9410751eb03bd867e" category="sidebar">Administrar Workload Factory</block>
   <block id="7ffef60a0bb1e63a8505f9e4285dab5f" category="sidebar">Iniciar sesión en Workload Factory</block>
+  <block id="9d4ab4efb1eff322f698ff725220f0c6" category="paragraph">El servicio de notificación de NetApp Workload Factory incluye la notificación para la gestión automática de la capacidad de almacenamiento.</block>
+  <block id="8880bf2394c75ebe6ed859ae103855bd" category="cell">La capacidad SSD automática o los inodos aumentan el éxito</block>
+  <block id="0f4ae4b5b0836264a3d9e9d0e29731c8" category="cell">Durante una reciente actualización de administración de capacidad automática, el sistema de archivos FSx para ONTAP aumentó la capacidad SSD o los inodos de volumen con éxito. Para obtener más información, vaya a Rastreador.</block>
+  <block id="1d19e21de0f93b11f5ceb8b535a3afc2" category="cell">Gestión de la capacidad</block>
+  <block id="cad4bcdf6806dc74dc24e416f5e646a0" category="cell">FSx para archivos ONTAP</block>
+  <block id="8ae74df732197be5b987055e70bb307d" category="cell">Falla automática en el aumento de capacidad del SSD o de los inodos</block>
+  <block id="564359bbc40d00ebaa88afdacbe218a7" category="cell">Durante una reciente actualización de administración de capacidad automática, el sistema de archivos FSx para ONTAP no pudo aumentar la capacidad SSD ni los inodos de volumen. Para obtener más información, vaya a Rastreador.</block>
+  <block id="b271a75b2d121a8cb5f59ae458394323" category="section-title">9 de septiembre de 2025</block>
 </blocks>
